feat: synchronize Locker submissions with CRM
